--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "weather",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Inna-ID.github.io/Weather",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "0.9.5"
@@ -13,6 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
